--- a/src/app/booking/components/summary-passengers/summary-passengers.component.html
+++ b/src/app/booking/components/summary-passengers/summary-passengers.component.html
@@ -1,1 +1,22 @@
-<mat-card>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus incidunt harum quod. Nesciunt odio aut quasi veniam, sunt iste voluptatum iure tempora aliquam itaque explicabo, tenetur at dicta, praesentium fuga.</mat-card>
+<mat-card class="container">
+  <ul class="summary-cost-container">
+    <li class="cost-passenger">
+
+      <div class="description-container">
+        <p class="description-title">1 x Adult Fare</p>
+        <div class="details">
+          <p>Fare</p>
+          <p>Tax & Service Charge</p>
+        </div>
+      </div>
+
+      <div class="cost-container">
+        <p class="description-title">€257.31</p>
+        <p>€166.00</p>
+        <p>€91.31</p>
+      </div>
+
+    </li>
+  </ul>
+
+</mat-card>
