--- a/src/variables.scss
+++ b/src/variables.scss
@@ -17,4 +17,5 @@
   --auxiliary-color-opacity02: #74767a33; // использован как фон хедера
   --neutral-color-90: #f1f3f626; // использован как цвет кнопок хедера
   --contrast-bg-color: #F4F6F9;  // фон инпутов, некоторых кнопок на белом фоне
+  --neutral-color: #f1f3f6
 }
