--- a/src/app/booking/components/passengers-list/passengers-list.component.html
+++ b/src/app/booking/components/passengers-list/passengers-list.component.html
@@ -2,7 +2,7 @@
   <ul class="passengers-list">
     <li *ngFor="let item of items; let i = index; trackBy: trackByFn">
       <div class="container">
-        <app-passenger-item [index]="i + 1" [passenger]="item"></app-passenger-item>
+        <app-passenger-item [index]="i" [passengerCategory]="item" [passengerData]="passengersDataArray[i]"></app-passenger-item>
       </div>
     </li>
   </ul>
