--- a/src/app/booking/components/summary-flight/summary-flight.component.scss
+++ b/src/app/booking/components/summary-flight/summary-flight.component.scss
@@ -2,6 +2,30 @@
   border-top: 3px solid var(--primary-color);
 }
 
+.flight-container {
+  padding: 2.2rem 2.4rem;
+  background-color: var(--neutral-color);
+}
+
+.flight-info {
+  display: flex;
+  gap: 2rem;
+  font-size: 2.4rem;
+  line-height: 2.4rem;
+  font-weight: 700;
+}
+
+.flight-number {
+  color: var(--primary-color);
+}
+
+.time-info {
+  display: flex;
+  gap: 3.6rem;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+}
+
 .passengers-list {
   &:last-child {
     border-bottom: none;
@@ -24,7 +48,7 @@
   font-size: 1.6rem;
   letter-spacing: 0.5px;
   line-height: 24px;
-  border-bottom: 1px solid var(--auxiliary-color);
+  border-bottom: 1px solid var(--neutral-color);
 }
 
 .name {
