fix: fix minor bags on booking/payment

--- a/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
+++ b/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
@@ -34,7 +34,7 @@
           >
             <mat-icon>remove</mat-icon>
           </button>
-          <input matInput type="number" formControlName="luggage" />
+          <input matInput type="number" formControlName="luggage" readonly/>
           <button
             mat-button
             mat-icon-button
