--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,6 +13,7 @@
   --accent-bg-color: #FFFFFF; // цвет фона для попапов, диалоговых окон, всплывашек, форм
   --error-color: #B3261E; // цвет сообщений об ошибках (валидация)
   --bg-neutral: #F4F6F9;
+  --input-bg-color: #f5f5f5; //цвет для фона инпутов (как в MaterialUI)
 
   --auxiliary-color-opacity02: #74767a33; // использован как фон хедера
   --neutral-color-90: #f1f3f626; // использован как цвет кнопок хедера
