fix: fix set initial valus in personal form and contact form

--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -11,7 +11,7 @@
   <app-passengers-list></app-passengers-list>
 </div>
 
-<app-booking-contact></app-booking-contact>
+<app-booking-contact [contactData]="contact"></app-booking-contact>
 
 <div class="btns-container">
   <button class="ghost-btn" (click)="navToFlights()">Back</button>
