--- a/src/app/booking/pages/summary-page/summary-page.component.html
+++ b/src/app/booking/pages/summary-page/summary-page.component.html
@@ -11,7 +11,7 @@
 
 
 <div class="btns-container">
-  <button class="ghost-btn">Back</button>
+  <button class="ghost-btn" (click)="navToPassengers()">Back</button>
   <button class="ghost-btn ghost-btn__bordered">Add to order card</button>
   <button class="primary-btn">Buy now</button>
 </div>
