--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.scss
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.scss
@@ -81,12 +81,34 @@
 }
 
 .select {
+  display: flex;
+  align-items: center;
+}
+
+.select-text {
   display: -webkit-box;
    -webkit-line-clamp: 1;
            line-clamp: 1; 
    -webkit-box-orient: vertical;
    overflow: hidden;
    margin: 0;
+}
+
+.arrow-btn {
+  width: 2.5rem; 
+  height: 2.5rem;
+  padding: .5rem;
+  transition: all .5s ease;
+
+  & .mat-icon {
+    overflow: visible;
+  }
+}
+
+.arrow-btn_active {
+  & .mat-icon {
+    color: var(--active-color);
+  }
 }
 
 .passengers-select,
@@ -105,9 +127,26 @@
   position: absolute;
   background-color: var(--accent-bg-color);
   padding: 1rem;
+  top: 100%;
+  border-radius: 0 0 .5rem.5rem;
   left: 0;
   right: 0;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  height: 0%;
+  opacity: 0;
+  overflow: hidden;
+  box-shadow: var(--box-shadow);
+  transition: all .5s ease;
+}
+
+.options_opened {
+  height: 300%;
+  min-height: fit-content;
+  max-height: fit-content;
+  opacity: 1;
 }
 
 .number-input {
@@ -122,7 +161,8 @@
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
-  align-items: center
+  align-items: center;
+  justify-content: space-between;
 }
 
 .passenger-category {
@@ -137,6 +177,8 @@
 .counter {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: .4rem;
 }
 
@@ -147,6 +189,10 @@
 .passengers-select__label {
   color: var(--auxiliary-color);
   font-size: 1.3rem;
+}
+
+.label_active {
+  color: var(--active-color);
 }
 
 ::ng-deep .mat-form-field-underline,
