--- a/src/app/booking/pages/summary-page/summary-page.component.html
+++ b/src/app/booking/pages/summary-page/summary-page.component.html
@@ -5,7 +5,7 @@
 
 <div class="summary-container">
   <app-summary-flight></app-summary-flight>
-  <app-summary-flight *ngIf="isRoundTrip"></app-summary-flight>
+  <app-summary-flight *ngIf="(bookingInfo$ | async)?.roundTrip"></app-summary-flight>
   <app-summary-passengers></app-summary-passengers>
 </div>
 
