--- a/src/app/booking/components/summary-flight/summary-flight.component.html
+++ b/src/app/booking/components/summary-flight/summary-flight.component.html
@@ -2,12 +2,12 @@
   <div class="flight-container">
 
     <p class="flight-info">
-      <span class="flight-number">FR 125</span>
+      <span class="flight-number">{{flightNumber}}</span>
       <span>{{departureCity}} &mdash; {{destinationCity}}</span>
     </p>
     <p class="time-info">
       <span>{{departureDate | date: 'EEEE, d MMMM, y'}}</span>
-      <span>8.40 &mdash; 12.40</span>
+      <span>{{departureTime | date: 'H:mm'}} &mdash; {{destinationTime | date: 'H:mm'}}</span>
     </p>
   </div>
   <ul class="passengers-list">
@@ -16,7 +16,6 @@
       <div class="passenger-info">
         <p class="baggage" *ngIf="passenger.luggage">{{passenger.luggage}} checked bag{{luggageCount(passenger.luggage) > 1 ?'s' : ''}} (total 23 kg) included</p>
         <p class="add-baggage">1 cabin bag + personal item (max. 8 kg) included</p>
-        <p class="seat">Seat 19E</p>
       </div>
     </li>
   </ul>
