feat: move passengers counter select to a shared component

--- a/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.html
+++ b/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="passengers-select" [formGroup]="passengers">
+<div class="passengers-select" [formGroup]="passengersForm">
   <div class="selected-option">
     <span [ngClass]="{'passengers-select__label': true, 'label_active': isSelectOpened}">Passengers</span>
     <div class="select">
@@ -33,4 +33,4 @@
         </div>  
       </li>
     </ul>
-  </div> -->
+  </div>
