--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -62,27 +62,10 @@
     </mat-autocomplete>
   </mat-form-field>
 
-  <mat-form-field appearance="fill" *ngIf="bookingInfo?.roundTrip; else oneWayDatePicker">
-    <mat-label>Dates</mat-label>
-    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-      <input matStartDate formControlName="departureDate" placeholder="Start date">
-      <input matEndDate formControlName="destinationDate" placeholder="End date">
-    </mat-date-range-input>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker color="primary"></mat-date-range-picker>
-  
-    <mat-error *ngIf="range.controls['departureDate'].hasError('matStartDateInvalid')">Invalid start date</mat-error>
-    <mat-error *ngIf="range.controls['destinationDate'].hasError('matEndDateInvalid')">Invalid end date</mat-error>
-  </mat-form-field>
-
-  <ng-template #oneWayDatePicker [formGroup]="range">
-    <mat-form-field appearance="fill">
-      <mat-label>Date</mat-label>
-      <input matInput [matDatepicker]="oneWayPicker" formControlName="departureDate">
-      <mat-datepicker-toggle matIconSuffix [for]="oneWayPicker"></mat-datepicker-toggle>
-      <mat-datepicker #oneWayPicker></mat-datepicker>
-    </mat-form-field>
+  <app-date-picker-range [datesForm]="range" *ngIf="bookingInfo?.roundTrip; else oneWayDatePicker"></app-date-picker-range>
+  <ng-template #oneWayDatePicker>
+    <app-date-picker-single [datesForm]="range"></app-date-picker-single>
   </ng-template>
 
-  <app-passengers-counter-form [passengersForm]="passengers"></app-passengers-counter-form>
+  <app-passengers-counter-form [passengersForm]="passengers"></app-passengers-counter-form>  
 </form>
