--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -2,7 +2,7 @@
   <div class="search-panel_info" *ngIf="bookingInfo; else noInfo">
     <div class="cities">
       <span>{{ bookingInfo.departureAirport | airportToCity }}</span>
-      <button class="toggle-btn"><img src="/assets/toggle-trip-way-btn.svg" alt="Change direction"></button>
+      <button class="toggle-btn" (click)="toggleFlightDirections()"><img src="/assets/toggle-trip-way-btn.svg" alt="Change directions"></button>
       <span>{{ bookingInfo.destinationAirport | airportToCity }}</span>
     </div>
     <div class="dates-n-passengers">
@@ -37,7 +37,7 @@
     >
     <mat-autocomplete #autoAirportDeparture="matAutocomplete">
       <mat-option
-        *ngFor="let airport of airports | airportFilterPipe: departure; trackBy: trackByFn"
+        *ngFor="let airport of airports | airportFilterPipe: departure.value; trackBy: trackByFn"
         [value]="airport.airportCode"
       >
         {{airport.city}} ({{airport.airportCode}})
@@ -54,7 +54,7 @@
     >
     <mat-autocomplete #autoAirportDestination="matAutocomplete">
       <mat-option
-        *ngFor="let airport of airports | airportFilterPipe: destination; trackBy: trackByFn"
+        *ngFor="let airport of airports | airportFilterPipe: destination.value; trackBy: trackByFn"
         [value]="airport.airportCode"
       >
         {{airport.city}} ({{airport.airportCode}})
