--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -2,7 +2,7 @@
   <div class="search-panel_info" *ngIf="bookingInfo; else noInfo">
     <div class="cities">
       <span>{{ bookingInfo.departureAirport | airportToCity }}</span>
-      <button class="toggle-btn" (click)="toggleFlightDirections()"><img src="/assets/toggle-trip-way-btn.svg" alt="Change directions"></button>
+      <button class="toggle-btn" (click)="toggleFlightDirections()" [disabled]="!isEditAvailable"><img src="/assets/toggle-trip-way-btn.svg" alt="Change directions"></button>
       <span>{{ bookingInfo.destinationAirport | airportToCity }}</span>
     </div>
     <div class="dates-n-passengers">
