refactor: rename component

--- a/src/app/booking/pages/summary-page/summary-page.component.html
+++ b/src/app/booking/pages/summary-page/summary-page.component.html
@@ -5,7 +5,7 @@
 
 <div class="summary-container">
   <app-summary-flight  *ngFor="let flight of sortedFlights" [flight]="flight"></app-summary-flight>
-  <app-summary-passengers [flights]="sortedFlights"></app-summary-passengers>
+  <app-cost-passengers [flights]="sortedFlights"></app-cost-passengers>
 </div>
 
 
