--- a/src/app/booking/pages/flight-selection-page/flight-selection-page.component.html
+++ b/src/app/booking/pages/flight-selection-page/flight-selection-page.component.html
@@ -1,3 +1,6 @@
 <p>flight-selection-page works!</p>
 
-<button class="btn primary-btn" (click)="navigateToPassengers()">Continue</button>
+<div class="navigation-btns">
+  <button class="btn ghost-btn" (click)="navigateToMain()">Back</button>
+  <button class="btn primary-btn" (click)="navigateToPassengers()">Continue</button>
+</div>
