--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.scss
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.scss
@@ -54,7 +54,7 @@
   gap: 1rem;
   margin-top: 1rem;
   background-color: var(--accent-bg-color);
-  padding: 2rem 1rem;
+  padding: 2rem 2rem 1rem 2rem;;
   align-items: stretch;
 }
 
@@ -76,7 +76,17 @@
 
 ::ng-deep .mat-form-field-underline,
 ::ng-deep matformfieldlineripple,
-::ng-deep .mdc-line-ripple,
-::ng-deep .mat-mdc-form-field-subscript-wrapper {
+::ng-deep .mdc-line-ripple {
   display: none;
+}
+
+:disabled {
+  color: var(--disabled-color);
+}
+
+.validation {
+  position: relative;
+  background-color: var(--accent-bg-color);
+  top: -2rem;
+  margin: 0;
 }
