--- a/src/classes.scss
+++ b/src/classes.scss
@@ -40,13 +40,22 @@
 }
 
 .ghost-btn {
-  @include btn-hover-effect();
   background-color: var(--bg-neutral);
   border: none;
   color: var(--primary-color);
   font-weight: 500;
   display: flex;
   padding: .5rem 1.5rem;
+
+  &:hover {
+    transform: translateY(-.2rem);
+    text-shadow: 0px 3px 2px rgba(48, 48, 56, 0.3);
+  }
+
+  &:active {
+    transform: translateY(0rem);
+    text-shadow: none;
+  }
 
   &__bordered {
     border: 1px solid var(--primary-color);
