feat: add validation for passengers counter form

--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -76,4 +76,5 @@
   
 <div class="validation" *ngIf="form.invalid">
   <p class="error-message">{{form.errors?.['isDuplicate']}}</p>
+  <p class="error-message">{{passengers.errors?.['isPassengersValid']}}</p>
 </div>
