feat: add adaptive

--- a/src/app/booking/components/cost-passengers/cost-passengers.component.scss
+++ b/src/app/booking/components/cost-passengers/cost-passengers.component.scss
@@ -1,5 +1,15 @@
 :host {
+
   grid-column: 2/3;
+  @media screen and (max-width: 900px) {
+    max-width: 90%;
+    width: 100%;
+  }
+
+  @media screen and (max-width: 550px) {
+    max-width: none;
+  }
+
 }
 
 p {
@@ -8,6 +18,11 @@ p {
 
 .container {
   padding: 2.4rem 7.2rem 2rem 4rem;
+
+  @media screen and (max-width: 700px) {
+    padding: 2rem 2.4rem;
+  }
+
 }
 
 .summary-cost-container {
@@ -29,6 +44,11 @@ p {
 .line-conrainer {
   display: flex;
   justify-content: space-between;
+
+  @media screen and (max-width: 500px) {
+    gap: 5rem;
+  }
+
 }
 
 .description-title {
@@ -46,6 +66,11 @@ p {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+
+  @media screen and (max-width: 500px) {
+    padding-left: 1rem;
+  }
+
 }
 
 .total-container {
