--- a/src/app/booking/components/summary-flight/summary-flight.component.scss
+++ b/src/app/booking/components/summary-flight/summary-flight.component.scss
@@ -1,10 +1,34 @@
+:host {
+  @media screen and (max-width: 900px) {
+    max-width: 90%;
+    width: 100%;
+  }
+
+  @media screen and (max-width: 550px) {
+    max-width: none;
+  }
+
+}
+
+p {
+  margin: 0;
+}
+
 .top-border {
   border-top: 3px solid var(--primary-color);
 }
 
 .flight-container {
   padding: 2.2rem 2.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   background-color: var(--neutral-color);
+
+  @media screen and (max-width: 550px) {
+    flex-direction: column;
+  }
+
 }
 
 .flight-info {
@@ -13,6 +37,22 @@
   font-size: 2.4rem;
   line-height: 2.4rem;
   font-weight: 700;
+
+  @media screen and (max-width: 970px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  @media screen and (max-width: 900px) {
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  @media screen and (max-width: 550px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
 }
 
 .flight-number {
@@ -24,6 +64,12 @@
   gap: 3.6rem;
   font-size: 1.6rem;
   line-height: 2.4rem;
+
+  @media screen and (max-width: 550px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
 }
 
 .passengers-list {
@@ -60,4 +106,9 @@
   flex-direction: column;
   gap: 0.5rem;
   padding-left: 2.8rem;
+
+  @media screen and (max-width: 500px) {
+    padding-left: 1rem;
+  }
+
 }
