feat: add trackBy functions

--- a/src/app/booking/pages/summary-page/summary-page.component.html
+++ b/src/app/booking/pages/summary-page/summary-page.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="summary-container">
-  <app-summary-flight  *ngFor="let flight of sortedFlights" [flight]="flight"></app-summary-flight>
+  <app-summary-flight  *ngFor="let flight of sortedFlights; trackBy: trackByFn" [flight]="flight"></app-summary-flight>
   <app-cost-passengers></app-cost-passengers>
 </div>
 
