--- a/src/app/booking/components/cost-passengers/cost-passengers.component.html
+++ b/src/app/booking/components/cost-passengers/cost-passengers.component.html
@@ -1,6 +1,6 @@
 <mat-card class="container" *ngIf="bookingInfo$ | async as bookingInfo">
   <ul class="summary-cost-container">
-    <ng-container *ngFor="let passenger of bookingInfo.passengers | keyvalue" >
+    <ng-container *ngFor="let passenger of bookingInfo.passengers | keyvalue; trackBy: trackByFn" >
       <li class="cost-passenger" *ngIf="passenger.value">
 
         <p class="line-conrainer description-title">
