feat: add booking-table and booking-item components; add UserBooking interface, userBookingsInfo object and methods to get, push, delete item

--- a/src/app/shopping-cart/pages/cart-page.component.html
+++ b/src/app/shopping-cart/pages/cart-page.component.html
@@ -1,1 +1,5 @@
-<p>cart-page works!</p>
+<mat-card class="cart-container">
+  <p class="title cart-title">Cart</p>
+  <app-booking-table></app-booking-table>
+</mat-card>
+
