--- a/src/app/booking/pages/summary-page/summary-page.component.html
+++ b/src/app/booking/pages/summary-page/summary-page.component.html
@@ -11,6 +11,6 @@
 
 <div class="btns-container">
   <button class="ghost-btn" (click)="navToPassengers()">Back</button>
-  <button class="ghost-btn ghost-btn__bordered" (click)="addBookingsToUser()">Add to order cart</button>
+  <button class="ghost-btn ghost-btn__bordered" (click)="addBookings()">Add to order cart</button>
   <button class="primary-btn">Buy now</button>
 </div>
