feat: add basic impementation booking-item

--- a/src/app/booking/components/summary-flight/summary-flight.component.html
+++ b/src/app/booking/components/summary-flight/summary-flight.component.html
@@ -5,7 +5,7 @@
       <span>{{departureAirport | airportToCity }} &mdash; {{destinationAirport | airportToCity}}</span>
     </p>
     <p class="time-info">
-      <span>{{bookingInfo.departureDate | date: 'EEEE, d MMMM, y'}}</span>
+      <span>{{departureDate | date: 'EEEE, d MMMM, y'}}</span>
       <span>{{departureTime | date: 'H:mm'}} &mdash; {{destinationTime | date: 'H:mm'}}</span>
     </p>
   </div>
