--- a/src/app/shared/components/booking-table/booking-item/booking-item.component.html
+++ b/src/app/shared/components/booking-table/booking-item/booking-item.component.html
@@ -1,5 +1,12 @@
 <div class="container">
-  <p>{{flightNumber}}</p>
+
+  <mat-checkbox color="primary" *ngIf="isNotPayed"></mat-checkbox>
+
+  <div>
+    <p>{{flightNumber}}</p>
+    <p *ngIf="roundTrip">{{returnflightNumber}}</p>
+  </div>
+
   <div>
     <p>
       {{departureAirport | airportToCity }} &mdash; {{destinationAirport | airportToCity}}
@@ -8,4 +15,40 @@
       {{destinationAirport | airportToCity }} &mdash; {{departureAirport | airportToCity}}
     </p>
   </div>
+
+  <p>{{roundTrip ? 'Round Trip' : 'One Way'}}</p>
+
+  <div>
+    <p>
+      <span>{{departureDate | date: 'd MMMM, y'}}, </span>
+      <span>{{departureTime | date: 'H:mm'}} &mdash; </span>
+      <span>{{destinationTime | date: 'H:mm'}}</span>
+    </p>
+    <p *ngIf="roundTrip">
+      <span>{{departureBackDate | date: 'd MMMM, y'}}, </span>
+      <span>{{departureBackTime | date: 'H:mm'}} &mdash; </span>
+      <span>{{destinationBackTime | date: 'H:mm'}}</span>
+    </p>
+  </div>
+
+  <ul>
+    <ng-container *ngFor="let passenger of passengers | keyvalue">
+      <li *ngIf="passenger.value">
+        <p>{{passenger.value}} x {{passenger.key}}</p>
+      </li>
+    </ng-container>
+  </ul>
+
+  <p>{{cost | currency: 'EUR'}}</p>
+
+  <div *ngIf="isNotPayed">
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="deleteBooking(booking)">Delete</button>
+      <button mat-menu-item (click)="editInfo()">Edit</button>
+    </mat-menu>
+  </div>
+
 </div>
