--- a/src/app/shared/components/booking-table/booking-table.component.html
+++ b/src/app/shared/components/booking-table/booking-table.component.html
@@ -1,3 +1,47 @@
-<p>booking-table header</p>
+<div class="header-container">
 
-<app-booking-item *ngFor="let booking of userBookings" [booking]="booking"></app-booking-item>
+  <div class="number-container">
+    <mat-checkbox color="primary"></mat-checkbox>
+    <p>Select all</p>
+  </div>
+
+  <p>No</p>
+
+  <p>Flight</p>
+
+  <p>Type trip</p>
+
+  <p>Data & Time</p>
+
+  <p>Passengers</p>
+
+  <p>Price</p>
+
+</div>
+
+<p *ngIf="!userBookings.length">No bookings. Please add new trip</p>
+<app-booking-item *ngFor="let booking of userBookings" [booking]="booking" class="bottom-line"></app-booking-item>
+
+<div class="bottom-container bottom-line">
+  <button (click)="navToMain()">+ Add new trip</button>
+  <p>
+    <span>Total</span>
+    <span>{{summary | currency: 'EUR'}}</span>
+  </p>
+</div>
+
+<div class="apply-container">
+  <div class="promo-container">
+    <input type="text" class="promo" placeholder="Promo Code">
+    <button>APPLY</button>
+  </div>
+
+  <div class="selected-container">
+    <p>
+      <span>1</span>
+      <span>selected</span>
+    </p>
+    <button class="primary-btn">Payment</button>
+  </div>
+</div>
+
