--- a/src/app/shared/components/booking-table/booking-table.component.html
+++ b/src/app/shared/components/booking-table/booking-table.component.html
@@ -1,44 +1,50 @@
-<div class="header-container">
+<ng-container *ngIf="unpaidUserBookings$ | async as unpaidUserBookings">
 
-  <mat-checkbox color="primary"></mat-checkbox>
+  <div class="header-container">
 
-  <p>No</p>
+    <mat-checkbox color="primary"></mat-checkbox>
 
-  <p>Flight</p>
+    <p>No</p>
 
-  <p>Type trip</p>
+    <p>Flight</p>
 
-  <p>Data & Time</p>
+    <p>Type trip</p>
 
-  <p>Passengers</p>
+    <p>Data & Time</p>
 
-  <p>Price</p>
+    <p>Passengers</p>
 
-</div>
+    <p>Price</p>
 
-<p *ngIf="!unpaidUserBookings.length">No bookings. Please add new trip</p>
-<app-booking-item *ngFor="let booking of unpaidUserBookings" [booking]="booking" class="bottom-line"></app-booking-item>
-
-<div class="bottom-container bottom-line">
-  <button (click)="navToMain()">+ Add new trip</button>
-  <p>
-    <span>Total</span>
-    <span>{{summary | currency: 'EUR'}}</span>
-  </p>
-</div>
-
-<div class="apply-container">
-  <form class="promo-container">
-    <input type="text" class="promo" placeholder="Promo Code">
-    <button class="without-padding">APPLY</button>
-  </form>
-
-  <div class="selected-container">
-    <p>
-      <span>1</span>
-      <span>selected</span>
-    </p>
-    <button class="primary-btn">Payment</button>
   </div>
-</div>
+
+  <p *ngIf="!unpaidUserBookings.length">No bookings. Please add new trip</p>
+  <app-booking-item *ngFor="let booking of unpaidUserBookings" [booking]="booking" class="bottom-line"></app-booking-item>
+
+  <div class="bottom-container bottom-line">
+    <button (click)="navToMain()">+ Add new trip</button>
+    <p>
+      <span>Total</span>
+      <span>{{summary(unpaidUserBookings) | currency: 'EUR'}}</span>
+    </p>
+  </div>
+
+  <div class="apply-container">
+    <form class="promo-container">
+      <input type="text" class="promo" placeholder="Promo Code">
+      <button class="without-padding">APPLY</button>
+    </form>
+
+    <div class="selected-container">
+      <p>
+        <span>1</span>
+        <span>selected</span>
+      </p>
+      <button class="primary-btn">Payment</button>
+    </div>
+  </div>
+
+</ng-container>
+
+
 
