fix: fix conflicts after merge

--- a/src/app/booking/pages/flight-selection-page/flight-selection-page.component.html
+++ b/src/app/booking/pages/flight-selection-page/flight-selection-page.component.html
@@ -1,3 +1,10 @@
+<app-date-slider></app-date-slider>
+
+<div *ngIf="(this.bookingInfo$ | async)?.roundTrip">
+  <app-date-slider></app-date-slider>
+</div>
+
+
 <div class="navigation-btns">
   <button class="btn ghost-btn" (click)="navigateToMain()">Back</button>
   <button class="btn primary-btn" (click)="navigateToPassengers()">Continue</button>
