--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -68,13 +68,13 @@
 
   <app-date-picker-range [datesForm]="range" *ngIf="bookingInfo?.roundTrip; else oneWayDatePicker"></app-date-picker-range>
   <ng-template #oneWayDatePicker>
-    <app-date-picker-single [datesForm]="range"></app-date-picker-single>
+    <app-date-picker-single [departureDate]="departureDate"></app-date-picker-single>
   </ng-template>
 
   <app-passengers-counter-form [passengersForm]="passengers"></app-passengers-counter-form>
 </form>
   
-<div class="validation" *ngIf="form.invalid">
+<div class="validation" *ngIf="editMode && form.invalid">
   <p class="error-message" *ngIf="form.invalid">{{form.errors?.['isDuplicate']}}</p>
   <p class="error-message" *ngIf="passengers.invalid">{{passengers.errors?.['isPassengersValid']}}</p>
 </div>
