--- a/src/app/shared/components/date-picker-single/date-picker-single.component.html
+++ b/src/app/shared/components/date-picker-single/date-picker-single.component.html
@@ -1,7 +1,7 @@
-<mat-form-field appearance="fill" [formGroup]="datesForm">
+<mat-form-field appearance="fill">
   <mat-label>Date</mat-label>
-  <input matInput [matDatepicker]="oneWayPicker" [formControl]="datesForm.controls.departureDate">
+  <input matInput [matDatepicker]="oneWayPicker" [formControl]="departureDate">
   <mat-datepicker-toggle matIconSuffix [for]="oneWayPicker"></mat-datepicker-toggle>
   <mat-datepicker #oneWayPicker></mat-datepicker>
-  <mat-error *ngIf="datesForm.controls.departureDate.hasError('isDateInPast')">date should be in future</mat-error>
+  <mat-error *ngIf="departureDate.hasError('isDateInPast')">date should be in future</mat-error>
 </mat-form-field>
