--- a/src/app/booking/pages/flight-selection-page/flight-selection-page.component.scss
+++ b/src/app/booking/pages/flight-selection-page/flight-selection-page.component.scss
@@ -5,3 +5,22 @@
   align-items: center;
   justify-content: flex-end;
 }
+
+.search-results-section {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.search-results__title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.4rem;
+}
+
+.no-flights-message {
+  font-size: 1.6rem;
+  color: var(--auxiliary-color);
+}
